tests/res/traits/error_req_with_conflict.say
// A composer may not both `with`-provide and `req`-depend on the same trait.
trait Clock { pub fn tick() { return 1; } }
type Player with Clock req Clock { init() {} } // error: 'Clock' is both `with`-provided and `req`-depended by this type — pick one
